--- a/KebabMasterApp/KebabMasterApp.csproj
+++ b/KebabMasterApp/KebabMasterApp.csproj
@@ -7,4 +7,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KebabCore\KebabCore.csproj" />
+    <ProjectReference Include="..\KebabInfrastructure\KebabInfrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
