--- a/KebabMasterApp/KebabMasterApp.csproj
+++ b/KebabMasterApp/KebabMasterApp.csproj
@@ -8,8 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\KebabApplication\KebabApplication.csproj" />
     <ProjectReference Include="..\KebabCore\KebabCore.csproj" />
     <ProjectReference Include="..\KebabInfrastructure\KebabInfrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DTO\" />
   </ItemGroup>
 
 </Project>
