--- a/KebabApplication/KebabApplication.csproj
+++ b/KebabApplication/KebabApplication.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\KebabCore\KebabCore.csproj" />
+    <ProjectReference Include="..\KebabInfrastructure\KebabInfrastructure.csproj" />
   </ItemGroup>
 
 </Project>
