--- a/KebabInfrastructure/KebabInfrastructure.csproj
+++ b/KebabInfrastructure/KebabInfrastructure.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="EntityFramework" Version="6.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
+    <PackageReference Include="SqlTableDependency" Version="8.5.8" />
   </ItemGroup>
 
   <ItemGroup>
