Add user viewer

--- a/KebabMasterApp/Properties/launchSettings.json
+++ b/KebabMasterApp/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "KebabMasterApp": {
-      "commandName": "Project",
-      "commandLineArgs": "-management"
+      "commandName": "Project"
     }
   }
 }
