Add dependency injection

--- a/KebabMasterApp/Properties/launchSettings.json
+++ b/KebabMasterApp/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "KebabMasterApp": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "-management"
     }
   }
 }
