--- a/KebabMasterApp/KebabMasterApp.csproj
+++ b/KebabMasterApp/KebabMasterApp.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Serilog" Version="2.11.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\KebabApplication\KebabApplication.csproj" />
     <ProjectReference Include="..\KebabCore\KebabCore.csproj" />
     <ProjectReference Include="..\KebabInfrastructure\KebabInfrastructure.csproj" />
